[package]
name = "codebreakers"
version = "0.1.0"
authors = ["eanyanwu"]
edition = "2018"
description = "Implementation the various techniques mentioned in David Khan's Codebreakers book"
readme = "README.md"
repository = "https://github.com/eanyanwu/codebreakers"
license-file = "LICENSE.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.27.0" }
quickcheck = "0.9"
quickcheck_macros = "0.9"